Bug 25046: There's a gap below the node and before the connector.

--- a/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
@@ -1578,3 +1578,7 @@ div#sessionWarning {
 .dropdownDisable{
      background-color: #EBEBE4;
 }
+
+.jOrgChart .node {
+   margin-bottom: -5px!important;
+}
